# MyNotepadEditor

./: CMakeLists.txt  MyNotepadEditor  OOP_Project_Documentation.docx  README.md
include/: MainWindow.hpp
resources/code_samples/: cxx.cpp
src/: MainWindow.cpp  main.cpp
